test/ui/tests/name-resolution/exposure/indirect-cycle.lushui
;;; TEST fail check

@(public topmost) use Center as C
@(public component) data Center: Type of
use topmost as component
